# Natural_Adversarial_Patch

./: .gitignore  PatchApply.txt  README.md  paths.conf  pyproject.toml
data/: cifar_net.pth  generage_dataset.ipynb  generate_moth.py  moth_AE_patch.ipynb
module/: dataset.py  extract_by_mask.py  get_label.py  pillow_test.ipynb
src/: main.py  make_moth_data.py
src/UI/: AEengine_interface.py  interface.py  ui.py
src/model/: attack_Check.py  attacker.py  cnn.py  evaluation.py  generate_moth.py  infer.ipynb  train.py
src/traffic_data/: dataset.py
